--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,120 @@ body {
 .animated-underline:hover::before {
   height: 70%;
 }
+
+.animated-link {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-color: #3dbf44;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 2px;
+  padding: 0px 1px;
+  padding-right: 0px;
+  z-index: 1;
+  transition: text-decoration-color 0.3s ease, padding-right 0.3s ease;
+}
+
+.animated-link::before {
+  content: "";
+  position: absolute;
+  bottom: 3.75px;
+  left: 1px;
+  right: 1px;
+  height: 0;
+  background-color: #3dbf44;
+  z-index: -1;
+  transition: height 0.4s ease;
+}
+
+.animated-link::after {
+  content: "";
+  display: inline-block;
+  width: 0;
+  height: 1em;
+  margin-left: 0;
+  background-image: url('/arrow-up-right.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  vertical-align: middle;
+  opacity: 0;
+  transform: translateY(-0.1em) translateX(-4px);
+  transition: opacity 0.4s ease, transform 0.4s ease, width 0.4s ease, margin-left 0.4s ease;
+}
+
+.animated-link:hover::before {
+  height: 70%;
+}
+
+.animated-link:hover::after {
+  width: 1em;
+  margin-left: 4px;
+  opacity: 1;
+  transform: translateY(-0.1em) translateX(0);
+}
+
+.animated-anchor {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-color: #3dbf44;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 2px;
+  padding: 0px 1px;
+  padding-right: 0px;
+  z-index: 1;
+  transition: text-decoration-color 0.3s ease, padding-right 0.3s ease;
+}
+
+.animated-anchor::before {
+  content: "";
+  position: absolute;
+  bottom: 3.75px;
+  left: 1px;
+  right: 1px;
+  height: 0;
+  background-color: #3dbf44;
+  z-index: -1;
+  transition: height 0.4s ease;
+}
+
+.animated-anchor::after {
+  content: "";
+  display: inline-block;
+  width: 0;
+  height: 1em;
+  margin-left: 0;
+  background-image: url('/hash.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  vertical-align: middle;
+  opacity: 0;
+  transform: translateY(-0.1em) translateX(-4px);
+  transition: opacity 0.4s ease, transform 0.4s ease, width 0.4s ease, margin-left 0.4s ease;
+}
+
+.animated-anchor:hover::before {
+  height: 70%;
+}
+
+.animated-anchor:hover::after {
+  width: 1em;
+  margin-left: 4px;
+  opacity: 1;
+  transform: translateY(-0.1em) translateX(0);
+}
+
+.animated-anchor.active::before {
+  height: 70%;
+}
+
+.animated-anchor.active::after {
+  width: 1em;
+  margin-left: 4px;
+  opacity: 1;
+  transform: translateY(-0.1em) translateX(0);
+}
