--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ body {
   margin: 0;
   padding: 0;
   background-color: #151515;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
 }
 
 .animated-underline {
