--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #151515;
+  background-color: #0a0a0b;
   overflow: hidden;
   height: 100vh;
   width: 100vw;
